# crb-inventory

./: .env.example  .gitignore  README.md  compose.yml  error.md  pyproject.toml
crb_inventory/: database_schema.py  main.py  settings.py
crb_inventory/core/: database.py  exception_handler.py  router_handler.py
crb_inventory/models/: category.py  custom_field.py  item.py  tag.py  utils.py  validators.py
crb_inventory/models/exceptions/: category.py  custom_field.py  item.py  resource.py  tag.py
crb_inventory/routers/v1/: category.py  custom_field.py  item.py  tag.py
crb_inventory/services/: category.py  custom_field.py  item.py  tag.py  utils.py  uuid.py
migrations/: env.py
migrations/versions/: 04d73cfe1f79_association_tables.py  07fb17fc2b01_removing_custom_field_feature.py  316a465663b3_create_tag_table_and_add_index_to_name_.py  3d3eb2ceba62_item_model.py  4070ffd8d538_create_custom_field_table.py  40af96bb5b5b_initial_version.py  5f12a722f2b1_create_category_table.py  90e53f0ad183_association_tables.py  be4ac5f34778_db_in_rc_version_1_0_0.py
tests/: conftest.py  factories.py  test_category.py  test_custom_field.py  test_item.py  test_model_validators.py  test_root.py  test_tag.py
tests/database/: random_data.sql
